--- a/app/src/main/res/layout/activity_otp.xml
+++ b/app/src/main/res/layout/activity_otp.xml
@@ -19,8 +19,7 @@
         android:id="@+id/new_btnback"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
+        android:padding="16dp"
         android:onClick="onRegisterClicked2"
         android:src="@drawable/arrow_back" />
 
