--- a/app/src/main/res/layout/activity_confirm_email.xml
+++ b/app/src/main/res/layout/activity_confirm_email.xml
@@ -19,8 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/arrow_back"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
+        android:padding="16dp"
         android:id="@+id/L_btnback"
         android:onClick="onLoginClicked2"/>
 
