--- a/app/src/main/res/layout/fragment_dospem.xml
+++ b/app/src/main/res/layout/fragment_dospem.xml
@@ -54,12 +54,17 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/downSelector"
         tools:itemCount="3"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         tools:listitem="@layout/list_dosen"
-        android:id="@+id/recyclerView"/>
+        android:id="@+id/recyclerView" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_alignParentBottom="true"/>
 
 </RelativeLayout>
