--- a/app/src/main/res/drawable/baseline_co_present_24.xml
+++ b/app/src/main/res/drawable/baseline_co_present_24.xml
@@ -1,4 +1,4 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="24dp" android:tint="#000000" android:viewportHeight="24" android:viewportWidth="24" android:width="24dp">
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="48dp" android:tint="#F1F1F1" android:viewportHeight="24" android:viewportWidth="24" android:width="48dp">
       
     <path android:fillColor="@android:color/white" android:pathData="M21,3H3C1.9,3 1,3.9 1,5v8h2V5h18v16c1.1,0 2,-0.9 2,-2V5C23,3.9 22.1,3 21,3z"/>
       
