--- a/app/src/main/res/layout/activity_accept.xml
+++ b/app/src/main/res/layout/activity_accept.xml
@@ -33,7 +33,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/circle"
-        android:layout_alignParentBottom="true"/>
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:rotation="270"/>
 
     <TextView
         android:id="@+id/title"
