--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -61,11 +61,19 @@
             android:padding="10dp"
             android:onClick="onFormClicked">
 
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/baseline_mode_edit_24"
+                android:id="@+id/icon_form"
+                android:layout_centerVertical="true"/>
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingLeft="10dp">
+                android:paddingLeft="10dp"
+                android:layout_toRightOf="@+id/icon_form">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -88,9 +96,8 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/double_arrow_right"
-                android:layout_alignParentEnd="true"
-                />
+                android:src="@drawable/double_arrow_right_24"
+                android:layout_alignParentEnd="true" />
 
         </RelativeLayout>
 
@@ -105,11 +112,19 @@
             android:layout_below="@+id/ly_1"
             android:onClick="onDospemClicked">
 
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/baseline_co_present_24"
+                android:id="@+id/icon_dospem"
+                android:layout_centerVertical="true"/>
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingLeft="10dp">
+                android:paddingLeft="10dp"
+                android:layout_toRightOf="@+id/icon_dospem">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -132,7 +147,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/double_arrow_right"
+                android:src="@drawable/double_arrow_right_24"
                 android:layout_alignParentEnd="true"
                 />
 
@@ -149,11 +164,19 @@
             android:layout_below="@+id/ly_2"
             android:onClick="onStatusClicked">
 
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/baseline_checklist_24"
+                android:id="@+id/icon_status"
+                android:layout_centerVertical="true"/>
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingLeft="10dp">
+                android:paddingLeft="10dp"
+                android:layout_toRightOf="@+id/icon_status">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -176,7 +199,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/double_arrow_right"
+                android:src="@drawable/double_arrow_right_24"
                 android:layout_alignParentEnd="true"
                 />
 
